:wrench: remove height fallback on cover - fix cover overflow across current browsers

--- a/1Sum/src/styles/app.css
+++ b/1Sum/src/styles/app.css
@@ -86,11 +86,6 @@ p {
   font-family: 'Nunito', sans-serif;
 }
 
-.notepad {
-  width: 100%;
-  height: 100%;
-}
-
 /* Color Pallette*/
 /* Box Shadow */
 /* Backgrounds */
