--- a/1Sum/src/styles/components/_cards.scss
+++ b/1Sum/src/styles/components/_cards.scss
@@ -42,7 +42,7 @@ margin-bottom: 1rem;
   font-family: 'Nunito', sans-serif;
 }  
 
-.notepad {
-  width: 100%;
-  height: 100%;
-}
+// .notepad {
+//   width: 100%;
+//   height: 100%;
+// }
