--- a/1Sum/src/styles/main.css
+++ b/1Sum/src/styles/main.css
@@ -126,6 +126,7 @@ a:hover {
 
 /***** GENERAL *****/
 .cover {
+  height: 100vh;
   padding: 0 1.5rem;
   display: -ms-flexbox;
   display: -webkit-box;
