--- a/1Sum/src/styles/pages/_cover.scss
+++ b/1Sum/src/styles/pages/_cover.scss
@@ -11,6 +11,7 @@ a:hover {
 
 /***** GENERAL *****/
 .cover {
+  height: 100vh;
   padding: 0 1.5rem;
   display: -ms-flexbox;
   display: -webkit-box;
